--- a/app/views/add-key-result.html
+++ b/app/views/add-key-result.html
@@ -1,8 +1,8 @@
-<md-dialog ng-controller="AddKrCtrl" xmlns="http://www.w3.org/1999/html">
+<md-dialog>
     <md-toolbar>
-        <div class="md-toolbar-tools">Add key result</div>
+        <div class="md-toolbar-tools">Add new key result</div>
     </md-toolbar>
-    <form name="krForm" ng-submit="add()">
+    <form ng-submit="add()">
         <md-dialog-content class="add-kr-container">
             <md-input-container>
                 <label>Title</label>
