--- a/app/styles/options.css
+++ b/app/styles/options.css
@@ -1,5 +1,21 @@
 /* GENERAL */
 
 html, body {
-    height: auto;
+    height: 300px;
+    overflow: hidden;
+}
+
+body {
+    font-size: 16px;
+    font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+
+.md-button {
+    box-shadow: none;
+}
+
+/* OPTIONS */
+
+.options input[type=file] {
+    display: none;
 }
