changed data structure to follow storage quota

--- a/app/views/update-value.html
+++ b/app/views/update-value.html
@@ -2,7 +2,7 @@
     <md-toolbar>
         <div class="md-toolbar-tools">Submit results</div>
     </md-toolbar>
-    <form ng-submit="add()">
+    <form ng-submit="update()">
         <md-dialog-content class="update-value" layout="row">
             <md-input-container flex="25">
                 <label>Value</label>
