--- a/app/styles/options.css
+++ b/app/styles/options.css
@@ -14,6 +14,10 @@ body {
     box-shadow: none;
 }
 
+.md-button:hover {
+    background: rgba(158, 158, 158, 0.2) none !important;
+}
+
 /* OPTIONS */
 
 .options input[type=file] {
