added navbar and tooltips, theme updates, styles refactoring

--- a/app/views/add-key-result.html
+++ b/app/views/add-key-result.html
@@ -1,6 +1,6 @@
 <md-dialog>
     <md-toolbar>
-        <div class="md-toolbar-tools">Add new key result</div>
+        <div class="md-toolbar-tools">Add new chart</div>
     </md-toolbar>
     <form ng-submit="add()">
         <md-dialog-content class="add-kr-container">
@@ -37,10 +37,10 @@
             </div>
         </md-dialog-content>
         <div class="md-actions">
-            <md-button class="md-accent" type="button" ng-click="cancel()">
+            <md-button class="md-primary" type="button" ng-click="cancel()">
                 Cancel
             </md-button>
-            <md-button class="md-primary" type="submit">
+            <md-button class="md-accent" type="submit">
                 Add
             </md-button>
         </div>
