--- a/app/views/delete-confirm.html
+++ b/app/views/delete-confirm.html
@@ -7,10 +7,10 @@
             Do you really want to delete "{{title}}"?
         </md-dialog-content>
         <div class="md-actions">
-            <md-button class="md-accent" ng-click="cancel()">
+            <md-button class="md-primary" ng-click="cancel()">
                 No
             </md-button>
-            <md-button class="md-primary" ng-click="remove()">
+            <md-button class="md-accent" ng-click="remove()">
                 Yes
             </md-button>
         </div>
