--- a/app/styles/newtab.css
+++ b/app/styles/newtab.css
@@ -1,16 +1,66 @@
-/* GENERAL */
+/* LAYOUT */
 
 body {
     font-size: 16px;
     font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
 
-/* HELPERS */
+/* PAGE DESCRIPTION */
+
+.page-description {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    margin-top: -160px;
+}
+
+.page-description h1,
+.page-description h2 {
+    color: #9aa2a6;
+}
+
+/* NAVBAR */
+
+.md-toolbar-tools > a.md-button.md-default-theme:not([disabled]):hover,
+.md-toolbar-tools > .md-button.md-default-theme:not([disabled]):hover {
+    background-color: rgba(255,255,255,0.1);
+}
+
+md-toolbar.md-default-theme .md-button {
+    color: #ffffff;
+}
+
+.md-toolbar-tools > a.md-button.md-default-theme:not([disabled]).md-focused,
+.md-toolbar-tools > .md-button.md-default-theme:not([disabled]).md-focused {
+    background-color: transparent;
+}
+
+md-toolbar.md-default-theme {
+    color: #fff;
+}
+
+
+/* FORMS */
 
 .input-description {
     display: inline-block;
     margin: 26px 0 0 10px;
 }
+
+
+/* BUTTONS */
+
+.md-button.md-fab,
+.md-button.md-fab.md-fab-bottom-right {
+    position: fixed;
+}
+
+.md-button > md-icon {
+    height: 24px;
+    margin: -4px 4px 0 0;
+}
+
 
 /* DIALOGS */
 
@@ -26,60 +76,4 @@ body {
     width: 260px;
 }
 
-/* CHARTS */
 
-.chart .content {
-    padding-top: 0;
-}
-
-.chart .header {
-    height: 26px;
-    border-bottom: 2px solid #97bbcd;
-    position: relative;
-    overflow: hidden;
-    padding-top: 16px;
-}
-
-.chart .actions,
-.chart .details {
-    position: absolute;
-    left: 0;
-    right: 0;
-    height: 42px;
-    transition: 0.2s;
-    transition-delay: 0.3s;
-}
-
-.chart .actions {
-    top: -42px;
-}
-
-.chart:hover .actions {
-    top: 0;
-}
-
-.chart .details  {
-    padding-top: 16px;
-    top: 0;
-}
-
-.chart:hover .details  {
-    top: 42px;
-}
-
-.chart .title {
-    font-weight: 400;
-    margin: 0;
-    line-height: 1em;
-    font-size: 16px;
-    padding-bottom: 10px;
-    color: #333;
-}
-
-.chart .result {
-    margin: 1px 0 0 0;
-    float: right;
-    line-height: 1em;
-    font-size: 14px;
-    color: #999;
-}
