--- a/app/styles/options.css
+++ b/app/styles/options.css
@@ -1,4 +1,4 @@
-/* GENERAL */
+/* LAYOUT */
 
 html, body {
     height: 300px;
@@ -9,6 +9,8 @@ body {
     font-size: 16px;
     font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+
+/* BUTTONS */
 
 .md-button {
     box-shadow: none;
@@ -22,4 +24,8 @@ body {
 
 .options input[type=file] {
     display: none;
+}
+
+md-list-item {
+    padding-left: 15px;
 }
