--- a/app/views/update-value.html
+++ b/app/views/update-value.html
@@ -18,10 +18,10 @@
             </md-input-container>
         </md-dialog-content>
         <div class="md-actions">
-            <md-button class="md-accent" type="button" ng-click="cancel()">
+            <md-button class="md-primary" type="button" ng-click="cancel()">
                 Cancel
             </md-button>
-            <md-button class="md-primary" type="submit">
+            <md-button class="md-accent" type="submit">
                 Submit
             </md-button>
         </div>
