charts data editing, refactoring, bug fixes

--- a/app/views/directives/chart.html
+++ b/app/views/directives/chart.html
@@ -8,7 +8,7 @@
                         Update current results
                     </md-tooltip>
                 </md-button>
-                <md-button ng-disabled="true">
+                <md-button ng-click="edit($event)">
                     Edit
                     <md-tooltip md-direction="bottom" md-autohide="true" md-delay="800">
                         Edit chart details
@@ -22,8 +22,8 @@
                 </md-button>
             </div>
             <div class="details">
-                <p class="result">{{::data.result}} of {{::data.goal}} {{::data.units}}</p>
-                <h2 class="title">{{::data.title}}</h2>
+                <p class="result">{{data.result}} of {{data.goal}} {{data.units}}</p>
+                <h2 class="title">{{data.title}}</h2>
             </div>
         </div>
         <canvas class="chart chart-line" height="{{height}}"
