--- a/app/views/key-result-form.html
+++ b/app/views/key-result-form.html
@@ -1,8 +1,10 @@
 <md-dialog>
     <md-toolbar>
-        <div class="md-toolbar-tools">Add new chart</div>
+        <div class="md-toolbar-tools">
+            {{isEdit ? 'Edit chart' : 'Add new chart'}}
+        </div>
     </md-toolbar>
-    <form ng-submit="add()">
+    <form ng-submit="submit()">
         <md-dialog-content class="add-kr-container">
             <md-input-container>
                 <label>Title</label>
@@ -24,6 +26,7 @@
                     <label>Start Date</label>
                     <span class="md-placeholder">{{dateFormat}}</span>
                     <input type="text" autocomplete="off" maxlength="10" required
+                           ng-disabled="isEdit"
                            pattern="20\d{2}-(0[1-9]|1[0-2])-(0[1-9]|[12]\d|3[01])"
                            ng-model="kr.start">
                 </md-input-container>
@@ -31,6 +34,7 @@
                     <label>End Date</label>
                     <span class="md-placeholder">{{dateFormat}}</span>
                     <input type="text" autocomplete="off" maxlength="10" required
+                           ng-disabled="isEdit"
                            pattern="20\d{2}-(0[1-9]|1[0-2])-(0[1-9]|[12]\d|3[01])"
                            ng-model="kr.end">
                 </md-input-container>
@@ -41,7 +45,7 @@
                 Cancel
             </md-button>
             <md-button class="md-accent" type="submit">
-                Add
+                {{isEdit ? 'Save' : 'Add'}}
             </md-button>
         </div>
     </form>
