--- a/app/views/delete-confirm.html
+++ b/app/views/delete-confirm.html
@@ -1,6 +1,6 @@
 <md-dialog>
     <md-toolbar>
-        <div class="md-toolbar-tools">Delete key result</div>
+        <div class="md-toolbar-tools">Delete {{entity}}</div>
     </md-toolbar>
     <form ng-submit="add()">
         <md-dialog-content class="delete-confirm" layout="row">
