--- a/app/views/key-result-form.html
+++ b/app/views/key-result-form.html
@@ -5,7 +5,7 @@
         </div>
     </md-toolbar>
     <form ng-submit="submit()">
-        <md-dialog-content class="add-kr-container">
+        <md-dialog-content class="kr-form">
             <md-input-container>
                 <label>Title</label>
                 <input type="text" ng-model="kr.title" autocomplete="off" maxlength="32" required>
