--- a/app/views/directives/bookmark.html
+++ b/app/views/directives/bookmark.html
@@ -1,4 +1,4 @@
-<md-card class="item-card">
+<md-card class="item-card" ng-cloak>
     <md-card-content class="content">
         <div class="header">
             <div class="actions" layout="row" layout-align="center center">
@@ -17,7 +17,7 @@
             </div>
             <div class="details">
                 <h2 class="title">
-                    <img class="favicon" src="http://google.com/s2/favicons?domain={{host}}"/>
+                    <img class="favicon" src="http://www.google.com/s2/favicons?domain={{host}}"/>
                     {{data.title}}
                 </h2>
             </div>
