--- a/app/views/directives/chart.html
+++ b/app/views/directives/chart.html
@@ -1,4 +1,4 @@
-<md-card class="item-card">
+<md-card class="item-card" ng-cloak>
     <md-card-content class="content">
         <div class="header">
             <div class="actions" layout="row" layout-align="center center">
