--- a/app/views/bookmark-form.html
+++ b/app/views/bookmark-form.html
@@ -1,27 +1,37 @@
-<md-dialog>
-    <md-toolbar>
-        <div class="md-toolbar-tools">
-            {{isEdit ? 'Edit bookmark' : 'Add new bookmark'}}
-        </div>
-    </md-toolbar>
+<md-dialog ng-cloak>
     <form ng-submit="submit()">
+
+        <md-toolbar>
+            <div class="md-toolbar-tools">
+                <h2>{{isEdit ? 'Edit bookmark' : 'Add new bookmark'}}</h2>
+            </div>
+        </md-toolbar>
+
         <md-dialog-content class="bookmarks-form">
-            <md-input-container>
-                <label>Title</label>
-                <input type="text" ng-model="bookmark.title" autocomplete="off" maxlength="32" required>
-            </md-input-container>
-            <md-input-container>
-                <label>URL</label>
-                <input type="url" ng-model="bookmark.url" autocomplete="off" required>
-            </md-input-container>
+            <div class="md-dialog-content">
+                <div layout="row">
+                    <md-input-container flex="100">
+                        <label>Title</label>
+                        <input type="text" ng-model="bookmark.title" autocomplete="off" maxlength="32" required>
+                    </md-input-container>
+                </div>
+                <div layout="row">
+                    <md-input-container flex="100">
+                        <label>URL</label>
+                        <input type="url" ng-model="bookmark.url" autocomplete="off" required>
+                    </md-input-container>
+                </div>
+            </div>
         </md-dialog-content>
-        <div class="md-actions">
+
+        <md-dialog-actions>
             <md-button class="md-primary" type="button" ng-click="cancel()">
                 Cancel
             </md-button>
             <md-button class="md-accent" type="submit">
                 {{isEdit ? 'Save' : 'Add'}}
             </md-button>
-        </div>
+        </md-dialog-actions>
+
     </form>
 </md-dialog>
