--- a/app/views/key-result-form.html
+++ b/app/views/key-result-form.html
@@ -1,52 +1,60 @@
-<md-dialog>
-    <md-toolbar>
-        <div class="md-toolbar-tools">
-            {{isEdit ? 'Edit chart' : 'Add new chart'}}
-        </div>
-    </md-toolbar>
+<md-dialog ng-cloak>
     <form ng-submit="submit()">
-        <md-dialog-content class="kr-form">
-            <md-input-container>
-                <label>Title</label>
-                <input type="text" ng-model="kr.title" autocomplete="off" maxlength="32" required>
-            </md-input-container>
-            <div layout="row">
-                <md-input-container flex="50">
-                    <label>Goal</label>
-                    <input type="number" ng-model="kr.goal" min="1" max="1000" autocomplete="off" required>
-                </md-input-container>
-                <md-input-container flex="50">
-                    <label>Units</label>
-                    <span class="md-placeholder">%, times, points, etc.</span>
-                    <input type="text" ng-model="kr.units" autocomplete="off" maxlength="16" required>
-                </md-input-container>
+
+        <md-toolbar>
+            <div class="md-toolbar-tools">
+                <h2>{{isEdit ? 'Edit chart' : 'Add new chart'}}</h2>
             </div>
-            <div layout="row">
-                <md-input-container flex="50">
-                    <label>Start Date</label>
-                    <span class="md-placeholder">{{dateFormat}}</span>
-                    <input type="text" autocomplete="off" maxlength="10" required
-                           ng-disabled="isEdit"
-                           pattern="20\d{2}-(0[1-9]|1[0-2])-(0[1-9]|[12]\d|3[01])"
-                           ng-model="kr.start">
-                </md-input-container>
-                <md-input-container flex="50">
-                    <label>End Date</label>
-                    <span class="md-placeholder">{{dateFormat}}</span>
-                    <input type="text" autocomplete="off" maxlength="10" required
-                           ng-disabled="isEdit"
-                           pattern="20\d{2}-(0[1-9]|1[0-2])-(0[1-9]|[12]\d|3[01])"
-                           ng-model="kr.end">
-                </md-input-container>
+        </md-toolbar>
+
+        <md-dialog-content class="kr-form">
+            <div class="md-dialog-content">
+                <div layout="row">
+                    <md-input-container flex="100">
+                        <label>Title</label>
+                        <input type="text" ng-model="kr.title" autocomplete="off" maxlength="32" required>
+                    </md-input-container>
+                </div>
+                <div layout="row">
+                    <md-input-container flex="50">
+                        <label>Goal</label>
+                        <input type="number" ng-model="kr.goal" min="1" max="1000" autocomplete="off" required>
+                    </md-input-container>
+                    <md-input-container flex="50">
+                        <label>Units</label>
+                        <span class="md-placeholder">%, times, etc.</span>
+                        <input type="text" ng-model="kr.units" autocomplete="off" maxlength="16" required>
+                    </md-input-container>
+                </div>
+                <div layout="row">
+                    <md-input-container flex="50">
+                        <label>Start Date</label>
+                        <span class="md-placeholder">{{dateFormat}}</span>
+                        <input type="text" autocomplete="off" maxlength="10" required
+                               ng-disabled="isEdit"
+                               pattern="20\d{2}-(0[1-9]|1[0-2])-(0[1-9]|[12]\d|3[01])"
+                               ng-model="kr.start">
+                    </md-input-container>
+                    <md-input-container flex="50">
+                        <label>End Date</label>
+                        <span class="md-placeholder">{{dateFormat}}</span>
+                        <input type="text" autocomplete="off" maxlength="10" required
+                               ng-disabled="isEdit"
+                               pattern="20\d{2}-(0[1-9]|1[0-2])-(0[1-9]|[12]\d|3[01])"
+                               ng-model="kr.end">
+                    </md-input-container>
+                </div>
             </div>
         </md-dialog-content>
-        <div class="md-actions">
+
+        <md-dialog-actions>
             <md-button class="md-primary" type="button" ng-click="cancel()">
                 Cancel
             </md-button>
             <md-button class="md-accent" type="submit">
                 {{isEdit ? 'Save' : 'Add'}}
             </md-button>
-        </div>
+        </md-dialog-actions>
+
     </form>
 </md-dialog>
