--- a/app/styles/bookmarks.css
+++ b/app/styles/bookmarks.css
@@ -2,9 +2,10 @@
 
 .item-card .thumbnail {
     display: block;
-    margin-bottom: 10px;
+    margin: 8px 0 10px;
     background-size: cover;
     background-position: top center;
+    border: 1px solid #eaf1f5;
 }
 
 .item-card .favicon {
