--- a/app/views/key-result-form.html
+++ b/app/views/key-result-form.html
@@ -1,9 +1,9 @@
-<md-dialog ng-cloak>
-    <form ng-submit="submit()">
+<md-dialog>
+    <form ng-submit="vm.submit()">
 
         <md-toolbar>
             <div class="md-toolbar-tools">
-                <h2>{{isEdit ? 'Edit chart' : 'Add new chart'}}</h2>
+                <h2>{{vm.isEdit ? 'Edit chart' : 'Add new chart'}}</h2>
             </div>
         </md-toolbar>
 
@@ -12,47 +12,47 @@
                 <div layout="row">
                     <md-input-container flex="100">
                         <label>Title</label>
-                        <input type="text" ng-model="kr.title" autocomplete="off" maxlength="32" required>
+                        <input type="text" ng-model="vm.kr.title" autocomplete="off" maxlength="32" required>
                     </md-input-container>
                 </div>
                 <div layout="row">
                     <md-input-container flex="50">
                         <label>Goal</label>
-                        <input type="number" ng-model="kr.goal" min="1" max="1000" autocomplete="off" required>
+                        <input type="number" ng-model="vm.kr.goal" min="1" max="1000" autocomplete="off" required>
                     </md-input-container>
                     <md-input-container flex="50">
                         <label>Units</label>
                         <span class="md-placeholder">%, times, etc.</span>
-                        <input type="text" ng-model="kr.units" autocomplete="off" maxlength="16" required>
+                        <input type="text" ng-model="vm.kr.units" autocomplete="off" maxlength="16" required>
                     </md-input-container>
                 </div>
                 <div layout="row">
                     <md-input-container flex="50">
                         <label>Start Date</label>
-                        <span class="md-placeholder">{{dateFormat}}</span>
+                        <span class="md-placeholder">{{vm.dateFormat}}</span>
                         <input type="text" autocomplete="off" maxlength="10" required
-                               ng-disabled="isEdit"
+                               ng-disabled="vm.isEdit"
                                pattern="20\d{2}-(0[1-9]|1[0-2])-(0[1-9]|[12]\d|3[01])"
-                               ng-model="kr.start">
+                               ng-model="vm.kr.start">
                     </md-input-container>
                     <md-input-container flex="50">
                         <label>End Date</label>
-                        <span class="md-placeholder">{{dateFormat}}</span>
+                        <span class="md-placeholder">{{vm.dateFormat}}</span>
                         <input type="text" autocomplete="off" maxlength="10" required
-                               ng-disabled="isEdit"
+                               ng-disabled="vm.isEdit"
                                pattern="20\d{2}-(0[1-9]|1[0-2])-(0[1-9]|[12]\d|3[01])"
-                               ng-model="kr.end">
+                               ng-model="vm.kr.end">
                     </md-input-container>
                 </div>
             </div>
         </md-dialog-content>
 
         <md-dialog-actions>
-            <md-button class="md-primary" type="button" ng-click="cancel()">
+            <md-button class="md-primary" type="button" ng-click="vm.cancel()">
                 Cancel
             </md-button>
             <md-button class="md-accent" type="submit">
-                {{isEdit ? 'Save' : 'Add'}}
+                {{vm.isEdit ? 'Save' : 'Add'}}
             </md-button>
         </md-dialog-actions>
 
