--- a/app/views/update-value.html
+++ b/app/views/update-value.html
@@ -1,5 +1,5 @@
-<md-dialog ng-cloak>
-    <form ng-submit="update()">
+<md-dialog>
+    <form ng-submit="vm.update()">
 
         <md-toolbar>
             <div class="md-toolbar-tools">
@@ -11,22 +11,22 @@
             <div class="md-dialog-content">
                 <md-input-container flex="25">
                     <label>Value</label>
-                    <input type="number" ng-model="data.value" min="0" max="{{chartData.goal}}" autocomplete="off"
+                    <input type="number" ng-model="vm.data.value" min="0" max="{{vm.chartData.goal}}" autocomplete="off"
                            required>
                 </md-input-container>
-                <span class="input-description" flex="35">{{chartData.units}}</span>
+                <span class="input-description" flex="35">{{vm.chartData.units}}</span>
                 <md-input-container flex="40">
                     <label>Date</label>
-                    <span class="md-placeholder">{{dateFormat}}</span>
+                    <span class="md-placeholder">{{vm.dateFormat}}</span>
                     <input type="text" autocomplete="off" maxlength="10" required
                            pattern="20\d{2}-(0[1-9]|1[0-2])-(0[1-9]|[12]\d|3[01])"
-                           ng-model="data.date">
+                           ng-model="vm.data.date">
                 </md-input-container>
             </div>
         </md-dialog-content>
 
         <md-dialog-actions>
-            <md-button class="md-primary" type="button" ng-click="cancel()">
+            <md-button class="md-primary" type="button" ng-click="vm.cancel()">
                 Cancel
             </md-button>
             <md-button class="md-accent" type="submit">
