[0.3.5] - fix the plotting of guide lines

--- a/app/styles/charts.css
+++ b/app/styles/charts.css
@@ -1,5 +1,9 @@
 /* CHARTS */
 
+.item-card .chart-container {
+    margin-top: 15px;
+}
+
 .item-card .result {
     margin: 1px 0 0 5px;
     float: right;
