--- a/app/views/directives/chart.html
+++ b/app/views/directives/chart.html
@@ -26,7 +26,7 @@
                 <h2 class="title">{{data.title}}</h2>
             </div>
         </div>
-        <div ng-style="{height: height + 'px'}">
+        <div class="chart-container" ng-style="{height: height + 'px'}">
             <canvas class="chart chart-line"
                 chart-data="data.data"
                 chart-dataset-override="data.override"
