[0.4.0] - add a date-pickers - add a hint for last updated date/time - fix the tab title - auto-focus the "value" input - update some dependencies

--- a/app/styles/newtab.css
+++ b/app/styles/newtab.css
@@ -32,6 +32,11 @@ md-input-container .md-placeholder {
     top: -16px;
 }
 
+.hint {
+    font-size: 12px;
+    line-height: 20px;
+}
+
 /* BUTTONS */
 
 .md-button > md-icon {
